--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.13",
+    "@farcaster/frame-core": "^0.0.24",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
-    "@worldcoin/minikit-js": "1.5.0",
     "eruda": "^3.2.3",
     "jiti": "1.21.7",
     "jose": "^5.9.6",
@@ -35,5 +35,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
 }
