--- a/package.json
+++ b/package.json
@@ -11,18 +11,28 @@
   },
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
-    "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-core": "^0.0.24",
+    "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eruda": "^3.2.3",
+    "framer-motion": "^12.4.7",
     "jiti": "1.21.7",
     "jose": "^5.9.6",
+    "ky": "^1.7.5",
+    "lucide-react": "^0.475.0",
     "next": "14.2.6",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.22.11",
     "zod": "^3.24.1"
   },
