--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.3",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +45,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "viem": "^2.23.4",
     "zod": "^3.24.1"
   },
