--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.3",
+    "@hookform/resolvers": "^4.1.2",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "eruda": "^3.2.3",
@@ -39,7 +44,9 @@
     "next": "14.2.6",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-spinners": "^0.15.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
@@ -47,7 +54,7 @@
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "viem": "^2.23.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
